<resources>
    <string name="app_name">Subee</string>
    <string name="sub_name">Название подписки</string>
    <string name="sub_desc">Описание </string>
    <string name="sub_price">Стоимость $ </string>
    <string name="button_add">Добавить </string>
    <string name="button_update">Обновить </string>
    <string name="add_new_subscribe">Добавить новую подписку </string>
    <string name="update_subscribe">Обновить или удалить подписку</string>
    <string name="search_subscribe">Искать</string>
    <string name="swipe_up">Cмахните вверх</string>
    <string name="new_subscribe">Новая подписка</string>
    <string name="button_delete">Удалить</string>
    <string name="button_get">Начать</string>
    <string name="text_welcome">Добро пожаловать!</string>
    <string name="text_description_start">Легко управляйте своими подписками на сервисы</string>
    <string name="button_cancel_text">Отменить</string>
    <string name="text_floating">Текст</string>
    <string name="dollar_text_icon">$</string>
    <string name="total_text">Расходы</string>
    <string name="my_subscribe">Мои подписки</string>



</resources>