<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subname"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_one"
    tools:context=".fragments.add.AddFragment">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/sub_name"
        android:inputType="textPersonName"
        android:textColor="@color/gray_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/sub_desc"
        android:textColor="@color/gray_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/sub_price"
        android:inputType="number"
        android:textColor="@color/gray_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/dark_color"
        android:fontFamily="@font/nunito"
        app:cornerRadius="0dp"
        android:textColor="@color/background_two"
        android:text="@string/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_et" />


</androidx.constraintlayout.widget.ConstraintLayout>