<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.list.ListFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@color/dark_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </com.google.android.material.textview.MaterialTextView>

    <!--    <com.google.android.material.textview.MaterialTextView-->
    <!--        android:id="@+id/total_sum"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/total_text"-->
    <!--        android:textColor="@color/dark_color"-->
    <!--        android:textSize="14sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/total_tv"-->
    <!--        tools:ignore="MissingConstraints" />-->


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/icon_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dollar_text_icon"
        android:textColor="@color/gray_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/total_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="134"
        android:textColor="@color/dark_color"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="MissingConstraints">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/my_subscribe"
        android:textColor="@color/dark_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recycler"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </com.google.android.material.textview.MaterialTextView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_add"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_tv"
        tools:ignore="MissingConstraints">

    </com.google.android.material.button.MaterialButton>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_rv" />


</androidx.constraintlayout.widget.ConstraintLayout>