<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/persistent_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:behavior_peekHeight="100dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <View
        android:id="@+id/swipe_view"
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginTop="24dp"
        android:background="@color/background_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/swipe_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Cмахните верх"
        android:textColor="@color/gray_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_sub_swipe_tv">


    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_sub_swipe_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Новая подписка"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipe_view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:hint="@string/sub_name"
        android:inputType="textPersonName"
        android:textColor="@color/gray_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipe_up_tv"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/sub_desc"
        android:textColor="@color/gray_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/sub_price"
        android:inputType="number"
        android:textColor="@color/gray_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/dark_color"
        android:text="@string/button_add"
        android:textColor="@color/background_two"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_et" />

    <!--    <TextView-->
    <!--        android:id="@+id/textView3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="26dp"-->
    <!--        android:layout_marginTop="0dp"-->
    <!--        android:background="#E8E5E5"-->
    <!--        android:gravity="bottom|center_horizontal"-->
    <!--        android:text="—"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="30sp" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="30dp"-->
    <!--        android:layout_marginStart="0dp"-->
    <!--        android:layout_marginEnd="0dp"-->
    <!--        android:background="#E8E5E5"-->
    <!--        android:gravity="center|top"-->
    <!--        android:text="Explore Persistent Bottom Sheet"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textStyle="bold" />-->

    <!--    <Button-->
    <!--        android:id="@+id/button"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="#3FBCED"-->
    <!--        android:text="Follow us on Twitter @mobiraft"-->
    <!--        android:textColor="#FFFFFF"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textStyle="bold" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView4"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Mobiraft.com"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textColor="#344CE3"-->
    <!--        android:textSize="50sp" />-->
</androidx.constraintlayout.widget.ConstraintLayout>